# robot_programming

src/assignment_interfaces/: CMakeLists.txt  package.xml
src/assignment_interfaces/action/: AddID.action
src/assignment_ros2/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/assignment_ros2/assignment_ros2/: assignment.py
src/assignment_ros2/config/: assignment_params.yaml
src/assignment_ros2/launch/: assignment_launch.py
