<?xml version="1.0"?>
<package format="3">
  <name>assignment_ros2</name>
  <version>0.0.0</version>
  <description>Assignment for robot programming</description>
  <maintainer email="jonghyeon1011@naver.com">jonghyeon</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>assignment_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>